--- a/index.html
+++ b/index.html
@@ -15,7 +15,21 @@
 
     <div class="app">
 
-        <section class="card">user</section>
+        <section class="card user">
+            <picture>
+                <img src="assets/ph.jpeg" alt="">
+            </picture>
+
+            <div class="user__content">
+                <h1>Paulo Henrique</h1>
+
+                <p> Estagiário</p>
+
+            </div>
+
+
+        </section>
+    
 
         <section class="card">about</section>
 
