Adicionando links e a seção sobre

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <link rel="stylesheet" href="./styles/global.css">
 
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
+
 </head>
 <body>
 
@@ -25,18 +27,57 @@
 
                 <p> Estagiário</p>
 
+                <div class="social">
+                    <a href="//www.linkedin.com/in/paulo-henrique-%F0%9F%91%A8%F0%9F%8F%BB%E2%80%8D%F0%9F%92%BB-4b6865233/" class="social__link" target="_blank">
+                        <i class="ph ph-linkedin-logo"></i>
+                    </a>
+
+                    <a href="https://www.instagram.com/phenriquemusic/?igshid=OGQ5ZDc2ODk2ZA%3D%3D" class="social__link" target="_blank">
+                        <i class="ph ph-instagram-logo"></i>
+                    </a>
+
+                    <a href="https://github.com/Paulo-Henrique99/" class="social__link" target="_blank">
+                        <i class="ph ph-github-logo"></i>
+                    </a>
+
+                    <a href="https://twitter.com/ph_alenda_99" class="social__link" target="_blank">
+                        <i class="ph ph-twitter-logo"></i>
+                    </a>
+
+                </div>
+
             </div>
 
 
         </section>
     
 
-        <section class="card">about</section>
+        <section class="card about">
+            <h2 class="subtitle">Sobre</h2>
 
-        <section class="card projects">projects</section>
+            <p>
+                Meu nome é Paulo Henrique, tenho 24 anos e estou dando meus primeiros passos no 
+                mundo da programação. Estou atualmente desempenhando o papel de estagiário na SambaTech,
+                 onde tenho a oportunidade de aplicar e aprimorar meus conhecimentos. Além disso, estou 
+                 cursando Sistemas de Informação na Estácio.              
+            </p>
+
+            <p>
+                Nas horas livres faço live na <a href="https://www.twitch.tv/alenda_99" target="_blank">Twitch.tv</a> 
+                jogando FIFA - Euro Truck - Counter Strik - Call Of Duty Mobile entre outros.
+            </p>
+
+            <p>
+                <i>"Tente mover o mundo, o primeiro passo será mover a si mesmo"</i></p>
+
+        </section>
+
+        <section class="card projects">
+            <h2 class="subtitle">Projetos</h2>
+        </section>
 
     </div>
  
-    
+  
 </body>
 </html>
