Criando os projetos de forma dinamica

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <section class="card projects">
             <h2 class="subtitle">FILMES</h2>
 
-            <div class="project__content">
+            <div id="project__content">
                 <a href="https://embedder.net/e/tt0822854/" target="_blank" class="project">
                     <picture>
                         <img src="./assets/atirador.jpg" alt="">
@@ -85,7 +85,7 @@
                     <span>+16</span>
                     <span>Ação/Thriller</span>
                     <span>2007</span>
-                    <span>2h 6m</span>
+                    <span>2h 06m</span>
                 </div>
                 </a>
 
@@ -196,8 +196,8 @@
                     <!--<span>Para assistir, basta preparar sua pipoca e clicar no título do filme acima.</span>-->
                     <span>+12</span>
                     <span>Aventura/Ação</span>
-                    <span>2021</span>
-                    <span>1h 55m</span>
+                    <span>2007</span>
+                    <span>1h 25m</span>
                 </div>
                 </a> 
 
@@ -270,6 +270,6 @@
 
     </div>
  
-  
+  <script src="./scripts/index.js"></script>
 </body>
 </html>
