--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                         <i class="ph ph-twitter-logo"></i>
                     </a>
 
+                    <a href="https://www.twitch.tv/alenda_99" class="social__link" target="_blank">
+                        <i class="ph ph-twitch-logo"></i>
+                    </a>
+
                 </div>
 
             </div>
@@ -54,15 +58,18 @@
             <h2 class="subtitle">Sobre</h2>
 
             <p>
-                Meu nome é Paulo Henrique, tenho 24 anos e estou dando meus primeiros passos no 
-                mundo da programação. Estou atualmente desempenhando o papel de estagiário na SambaTech,
-                onde tenho a oportunidade de aplicar e aprimorar meus conhecimentos. Além disso, estou 
-                cursando Sistemas de Informação na Estácio.              
+                Olá Pessoal! Sou o Paulo Henrique, tenho 24 anos e estou dando os primeiros passos no mundo da 
+                programação. Atualmente, estou estagiando na SambaTech, onde tenho a chance de aplicar e 
+                aprimorar meus conhecimentos. Além disso, estou cursando Sistemas de Informação na Estácio.             
             </p>
 
             <p>
-                Nas horas livres faço live na <a href="https://www.twitch.tv/alenda_99" target="_blank">Twitch.tv</a> 
-                jogando FIFA - Euro Truck - Counter Strik - Call Of Duty Mobile entre outros.
+                Nos momentos livres, faço transmissões ao vivo na <a href="https://www.twitch.tv/alenda_99" target="_blank">Twitch.tv</a> jogando FIFA, Euro Truck, 
+                Counter Strike, Call Of Duty Mobile, entre outros. Tenho também uma grande paixão por filmes. 
+                Esta plataforma inicialmente era para ser um portfólio, mas ao longo da criação, decidi torná-la 
+                mais acessível para os amigos assistirem filmes. Estou no início desta jornada, é algo simples. 
+                Caso haja interesse em assistir a algum filme que ainda não esteja disponível aqui, entre em 
+                contato para que eu possa adicioná-lo.
             </p>
 
             <p><i>"Tente mover o mundo, o primeiro passo será mover a si mesmo"</i></p>
