--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@
 
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
 
+    <!-- Script AOS - Animações -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 </head>
 <body>
 
     <div class="app">
 
-        <section class="card user">
+        <section class="card user"
+        class="card user"
+        data-aos="fade-right"
+        data-aos-duration="800"
+        data-aos-easing="ease-in-out"
+        >
             <picture>
                 <img src="assets/ph.jpeg" alt="">
             </picture>
@@ -54,7 +62,12 @@
 
         </section>
     
-        <section class="card about">
+        <section class="card about"
+        class="card about"
+        data-aos="fade-left"
+        data-aos-duration="800"
+        data-aos-easing="ease-in-out"
+        >
             <h2 class="subtitle">Sobre</h2>
 
             <p>
@@ -76,7 +89,11 @@
 
         </section>
 
-        <section class="card projects">
+        <section class="card projects"
+        data-aos="fade-up"
+        data-aos-duration="800"
+        data-aos-easing="ease-in-out"
+        >
             <h2 class="subtitle">FILMES</h2>
 
             <div id="project__content">
@@ -278,5 +295,11 @@
     </div>
  
   <script src="./scripts/index.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  
+  <script>
+    AOS.init({ once: true })
+  </script>
+
 </body>
 </html>
