adicionando tags de SEO

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paulo Henrique</title>
+
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -14,6 +14,25 @@
 
     <!-- Script AOS - Animações -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <!-- Primary Meta Tags -->
+    <title>Paulo Henrique - Portfólio/Filmes</title>
+    <meta name="title" content="Paulo Henrique - Portfólio/Filmes" />
+    <meta name="description" content="Olá Pessoal! Sou o Paulo Henrique, tenho 24 anos e estou dando os primeiros passos no mundo da programação. Atualmente, estou estagiando na SambaTech, onde tenho a chance de aplicar e aprimorar meus conhecimentos. Além disso, estou cursando Sistemas de Informação na Estácio." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://portfolio-filmes-paulohenrique.netlify.app/" />
+    <meta property="og:title" content="Paulo Henrique - Portfólio/Filmes" />
+    <meta property="og:description" content="Olá Pessoal! Sou o Paulo Henrique, tenho 24 anos e estou dando os primeiros passos no mundo da programação. Atualmente, estou estagiando na SambaTech, onde tenho a chance de aplicar e aprimorar meus conhecimentos. Além disso, estou cursando Sistemas de Informação na Estácio." />
+    <meta property="og:image" content="https://portfolio-filmes-paulohenrique.netlify.app/assets/ph.jpeg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://portfolio-filmes-paulohenrique.netlify.app/" />
+    <meta property="twitter:title" content="Paulo Henrique - Portfólio/Filmes" />
+    <meta property="twitter:description" content="Olá Pessoal! Sou o Paulo Henrique, tenho 24 anos e estou dando os primeiros passos no mundo da programação. Atualmente, estou estagiando na SambaTech, onde tenho a chance de aplicar e aprimorar meus conhecimentos. Além disso, estou cursando Sistemas de Informação na Estácio." />
+    <meta property="twitter:image" content="https://portfolio-filmes-paulohenrique.netlify.app/assets/ph.jpeg" />
 
 </head>
 <body>
