melhorias de acessibilidade e reduzindo o tamanho das imagens

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+ 
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -55,23 +55,23 @@
                 <p> Estagiário</p>
 
                 <div class="social">
-                    <a href="//www.linkedin.com/in/paulo-henrique-%F0%9F%91%A8%F0%9F%8F%BB%E2%80%8D%F0%9F%92%BB-4b6865233/" class="social__link" target="_blank">
+                    <a title="Link para a rede social LinkedIn" aria-label="Link para a rede social LinkedIn" href="//www.linkedin.com/in/paulo-henrique-%F0%9F%91%A8%F0%9F%8F%BB%E2%80%8D%F0%9F%92%BB-4b6865233/" class="social__link" target="_blank">
                         <i class="ph ph-linkedin-logo"></i>
                     </a>
 
-                    <a href="https://www.instagram.com/phenriquemusic/?igshid=OGQ5ZDc2ODk2ZA%3D%3D" class="social__link" target="_blank">
+                    <a title="Link para a rede social Instagram" aria-label="Link para a rede social Instagram" href="https://www.instagram.com/phenriquemusic/?igshid=OGQ5ZDc2ODk2ZA%3D%3D" class="social__link" target="_blank">
                         <i class="ph ph-instagram-logo"></i>
                     </a>
 
-                    <a href="https://github.com/Paulo-Henrique99/" class="social__link" target="_blank">
+                    <a title="Link para a rede social GitHub" aria-label="Link para a rede social GitHub" href="https://github.com/Paulo-Henrique99/" class="social__link" target="_blank">
                         <i class="ph ph-github-logo"></i>
                     </a>
 
-                    <a href="https://twitter.com/ph_alenda_99" class="social__link" target="_blank">
+                    <a title="Link para a rede social Twitter" aria-label="Link para a rede social Twitter"  href="https://twitter.com/ph_alenda_99" class="social__link" target="_blank">
                         <i class="ph ph-twitter-logo"></i>
                     </a>
 
-                    <a href="https://www.twitch.tv/alenda_99" class="social__link" target="_blank">
+                    <a title="Link para a rede social Twitch" aria-label="Link para a rede social Twitch" href="https://www.twitch.tv/alenda_99" class="social__link" target="_blank">
                         <i class="ph ph-twitch-logo"></i>
                     </a>
 
@@ -89,13 +89,13 @@
         >
             <h2 class="subtitle">Sobre</h2>
 
-            <p>
+            <p style="text-align: justify;">
                 Olá Pessoal! Sou o Paulo Henrique, tenho 24 anos e estou dando os primeiros passos no mundo da 
                 programação. Atualmente, estou estagiando na SambaTech, onde tenho a chance de aplicar e 
                 aprimorar meus conhecimentos. Além disso, estou cursando Sistemas de Informação na Estácio.             
             </p>
 
-            <p>
+            <p style="text-align: justify;">
                 Nos momentos livres, faço transmissões ao vivo na <a href="https://www.twitch.tv/alenda_99" target="_blank">Twitch.tv</a> jogando FIFA, Euro Truck, 
                 Counter Strike, Call Of Duty Mobile, entre outros. Tenho também uma grande paixão por filmes. 
                 Esta plataforma inicialmente era para ser um portfólio, mas ao longo da criação, decidi torná-la 
@@ -104,7 +104,8 @@
                 contato para que eu possa adicioná-lo.
             </p>
 
-            <p><i>"Tente mover o mundo, o primeiro passo será mover a si mesmo"</i></p>
+            <p style="text-align: center;"><i>"Tente mover o mundo, o primeiro passo será mover a si mesmo"</i></p>
+
 
         </section>
 
